--- a/README.Rmd
+++ b/README.Rmd
@@ -13,11 +13,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-# citesperu
+
+# citesperu <a href='https://github.com/PaulESantos/citesperu'><img src='man/figures/libro_rojo.jpg' align="right" height="220" width="150" /></a><img src='man/figures/flora_cites.jpg' align="left" height="220" width="150" /></a>
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![CRAN status](https://www.r-pkg.org/badges/version/citesperu)](https://CRAN.R-project.org/package=citesperu)
+[![R-CMD-check](https://github.com/PaulESantos/citesperu/workflows/R-CMD-check/badge.svg)](https://github.com/PaulESantos/citesperu/actions)
 <!-- badges: end -->
 
 The goal of citesperu is to ...
@@ -27,7 +29,7 @@ The goal of citesperu is to ...
 You can install the released version of citesperu from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
-install.packages("citesperu")
+#install.packages("citesperu")
 ```
 
 ## Example
@@ -35,7 +37,7 @@ install.packages("citesperu")
 This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
-library(citesperu)
+#library(citesperu)
 ## basic example code
 ```
 
